# tenki

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  data_long.json
data/: data.json  data_air_hour.json  data_pdx.json  new_data.json
src/: cli.rs  main.rs  processor.rs  query.rs  request.rs  types.rs  weather.rs
