[package]
edition = "2018"
name = "tenki"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15"
form_urlencoded = "1.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
term-table = "1.3"
text-colorizer = "1.0"
